# brats-biohub

./: .gitignore  PROJECT_WALKTHROUGH.md  PROJECT_WALKTHROUGH_详解版.md  README.md  REPRODUCE.md  pyproject.toml  train.py
configs/: infer_sliding_window.yaml  preprocess.yaml  train_3d_unet.yaml
notebooks/: 00_preprocessing_demo.ipynb  01_data_qc.ipynb  01_project_presentation.ipynb  03_morphological_analysis.ipynb
reports/: generate_figures.py  results.csv  training_history.json
scripts/: convert_msd_to_brats.py  setup_data.sh
src/: __init__.py  eval.py  infer.py  train.py
src/data/: __init__.py  brats_dataset.py  transforms.py
src/preprocess/: __init__.py  bias_field.py  normalize.py  resample.py
